src/index.css
:root {
  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  -webkit-text-size-adjust: 100%;

  --header-height: 3rem;
  /*dark*/
  --navy-100: #020c1b;
  /*navy*/
  --navy-75: #0a192f;
  /*light*/
  --navy-50: #112240;
  /*lighest*/
  --navy-25: #233554;

  /*dark-slate*/
  --gray-100: #495670;
  --gray-75: #8892b0;
  --gray-50: #a8b2d1;
  --gray-25: #ccd6f6;

  --color-accent: #64ffda;
  --color-accent-tint: rgba(100, 255, 218, 0.1);

  /* font-color */
  --hue: 174;
  --sat: 63%;
  --color-heading: #ccd6f6;
  --color-body: #8892b0;
  --navy-shadow: rgba(2, 12, 27, 0.7);
  /* fonts */
  --font-mono: "SF Mono", "Fira Code", "Fira Mono", "Roboto Mono", monospace;


}


* {
  margin: 0;
  padding: 0;

}


html {
  scroll-behavior: smooth;
  /* scroll-padding: -200; */
  scroll-padding-top: 150px;
}

/* ScrollBar */
::-webkit-scrollbar {
  width: 12px;
}

::-webkit-scrollbar-thumb {
  background-color: var(--gray-100);
  border: 3px solid var(--navy-75);
  border-radius: 10px;
}

::-webkit-scrollbar-track {
  background: var(--navy-75);
}

body {
  background-color: #0a192f;
}

/* list */

